--- a/frontend/src/App/App.css
+++ b/frontend/src/App/App.css
@@ -1207,55 +1207,82 @@ h2, h3 {
 /* end of GuestProfiles.jsx */
 
 
-/* RoomAvailability.jsx styles */
-.room-availability {
-  max-width: 1000px;
+.booking-request {
+  font-family: Arial, sans-serif;
   margin: 20px auto;
+  text-align: center;
+}
+
+.booking-request-form {
+  background-color: #f9f9f9;
   padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: 400px;
 }
 
-.room-availability h2 {
-  font-size: 22px;
-  color: var(--primaryColor);
+.booking-request-form label {
+  display: block;
+  margin-bottom: 10px;
+  text-align: left;
+  font-weight: bold;
+}
+
+.booking-request-form input {
+  width: calc(100% - 10px);
+  padding: 8px;
   margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
-.room-availability table {
+.room-table-container {
+  margin: 20px auto;
+  width: 80%;
+}
+
+.room-table {
   width: 100%;
   border-collapse: collapse;
 }
 
-.room-availability table th,
-.room-availability table td {
+.room-table th, .room-table td {
   border: 1px solid #ddd;
   padding: 10px;
-  text-align: center;
 }
 
-.room-availability table th {
-  background-color: var(--primaryColor);
+.room-table th {
+  background-color: #f4f4f4;
+  text-align: left;
+}
+
+.room-table tr:hover {
+  background-color: #f1f1f1;
+}
+
+button {
+  padding: 8px 12px;
+  margin: 5px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 0.9;
+}
+
+button:first-of-type {
+  background-color: #4caf50;
   color: white;
 }
 
-.room-availability .status-occupied {
-  color: red;
-  font-weight: bold;
+button:last-of-type {
+  background-color: #f44336;
+  color: white;
 }
 
-.room-availability .status-vacant {
-  color: green;
-  font-weight: bold;
-}
-
-.room-availability .status-maintenance {
-  color: orange;
-  font-weight: bold;
-}
-
-/* end of RoomAvailability.jsx */
 
 
 /* RoomManagement.jsx styles */
@@ -1437,3 +1464,307 @@ input[type="text"], input[type="email"] {
 .inactive-btn {
   background-color: #f44336; /* Red for inactive users */
 }
+
+
+/* Admin view Messages */
+/* View Messages Section */
+.view-messages {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.view-messages h2 {
+  font-size: 28px;
+  color: black; /* Set the header text color to black */
+  margin-bottom: 20px;
+}
+
+.view-messages .error {
+  color: red; /* Red text for error messages */
+  margin-bottom: 20px;
+}
+
+.view-messages .messages-container {
+  width: 100%;
+  max-width: 800px; /* Limit width of the container */
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.view-messages .message-card {
+  background-color: white;
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.view-messages .message-card h3 {
+  font-size: 20px;
+  color: black; /* Set the name text color to black */
+  margin-bottom: 10px;
+}
+
+.view-messages .message-card p {
+  font-size: 16px;
+  color: black; /* Set the message text color to black */
+  margin: 5px 0;
+}
+
+.view-messages .message-card strong {
+  font-weight: bold;
+}
+
+.view-messages .message-card p:last-child {
+  font-style: verdana;
+  color: #666; /* Slightly lighter color for timestamp */
+}
+
+.view-messages p {
+  text-align: left;
+  font-size: 18px;
+  color: #666; /* Slightly lighter color for the "no messages" text */
+}
+
+.message-card button {
+  padding: 8px 12px;
+  margin-right: 8px;
+  background-color: var(--primaryColor);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.message-card button:hover {
+  background-color: var(--secondaryColor);
+}
+
+.edit-message-form {
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.edit-message-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+  margin-bottom: 10px;
+}
+
+.edit-message-form button {
+  padding: 8px 12px;
+  background-color: var(--primaryColor);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.edit-message-form button:hover {
+  background-color: var(--secondaryColor);
+}
+
+/* Admin view Messages */
+
+
+
+/* BookingPage styles */
+.booking-container {
+  max-width: 100%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.booking-container h1 {
+  font-size: 22px;
+  color: var(--primaryColor);
+  margin-bottom: 15px;
+}
+
+.booking-container .booking-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* Form field styles */
+.booking-container .form-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.booking-container .form-field label {
+  font-weight: bold;
+}
+
+.booking-container input,
+.booking-container button {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.booking-container input[readonly] {
+  background-color: #e9ecef;
+  cursor: not-allowed;
+}
+
+/* Button styling */
+.booking-container button {
+  background-color: var(--primaryColor);
+  color: black;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.booking-container button:hover {
+  background-color: var(--secondaryColor);
+}
+
+/* Custom styles for date input fields */
+.booking-container input[type="date"] {
+  padding: 10px;
+  font-size: 14px;
+}
+
+.booking-container .room-details-container {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.booking-container .room-details-container .room-detail {
+  flex: 1;
+  min-width: 150px;
+}
+
+.booking-container .room-details-container input[readonly] {
+  background-color: #e9ecef;
+  cursor: not-allowed;
+}
+
+
+
+/* PaymentPage styles */
+.payment-container {
+  max-width: 100%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.payment-container h1 {
+  font-size: 22px;
+  color: var(--primaryColor);
+  margin-bottom: 15px;
+}
+
+.payment-container .payment-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+/* Form field styles */
+.payment-container .form-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.payment-container .form-field label {
+  font-weight: bold;
+}
+
+.payment-container p {
+  margin: 5px 0;
+  color: black; /* Set text color to black */
+}
+
+/* Button styling */
+.payment-container button {
+  padding: 10px 20px;
+  background-color: var(--primaryColor);
+  color: black; /* Set button font color to black */
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.payment-container button:hover {
+  background-color: var(--secondaryColor);
+}
+
+
+
+
+/* PaymentVerificationPage styles */
+.payment-verification-container {
+  max-width: 100%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.payment-verification-container h1 {
+  font-size: 22px;
+  color: var(--primaryColor);
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.payment-verification-container .form-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.payment-verification-container .form-field label {
+  font-weight: bold;
+}
+
+.payment-verification-container p {
+  margin: 5px 0;
+  color: black; /* Ensure the text is black */
+}
+
+.payment-verification-container button {
+  padding: 10px 20px;
+  background-color: var(--primaryColor);
+  color: black; /* Make the font color of the button black */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.payment-verification-container button:hover {
+  background-color: var(--secondaryColor);
+}
+
+.payment-verification-container button:disabled {
+  background-color: #6c757d;
+  cursor: not-allowed;
+}
+
+
