--- a/frontend/src/App/App.css
+++ b/frontend/src/App/App.css
@@ -1215,7 +1215,7 @@ h2, h3 {
 
 /* end of GuestProfiles.jsx */
 
-
+/* Start Booking Page styles */
 .booking-request {
   font-family: Arial, sans-serif;
   margin: 20px auto;
@@ -1272,26 +1272,34 @@ h2, h3 {
 
 button {
   padding: 8px 12px;
-  margin: 5px;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
-button:hover {
-  opacity: 0.9;
+/* Edit button styles */
+.edit-button {
+  background-color: #4caf50; /* Green */
+  color: white;
+  margin-right: 5px;
 }
 
-button:first-of-type {
-  background-color: #4caf50;
+.edit-button:hover {
+  background-color: #45a049;
+}
+
+/* Delete button styles */
+.delete-button {
+  background-color: #f44336; /* Red */
   color: white;
 }
 
-button:last-of-type {
-  background-color: #f44336;
-  color: white;
+.delete-button:hover {
+  background-color: #d32f2f;
 }
-
+/* End of Booking Page styles */
 
 
 /* RoomManagement.jsx styles */
